--- a/main/templates/games_view.html
+++ b/main/templates/games_view.html
@@ -1,3 +1,12 @@
+{% extends 'base.html' %}
+{% load staticfiles %}
+
+{% block body %}
+
+<hr><h2 class="text-center"> This game section is currently under-construction! Check back soon! </h2><hr>
+
+{% endblock %}
+
 <!--Should have an entirely new backdrop, and three games.
 The idea for these games should be 
 1). Database Trivia
