--- a/main/templates/planet_list.html
+++ b/main/templates/planet_list.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 {% load staticfiles %}
 
 <!-- Add another type of backdrop
@@ -6,7 +7,7 @@
 
 {% block body %}
 
-    <h2 class> Here Is a List of All the Planets: </h2>
+    <hr><h2 class="text-center"> Here Is a List of All the Planets: </h2><hr>
 
     {% for homeworld in planet %}
 
