--- a/main/templates/species_list.html
+++ b/main/templates/species_list.html
@@ -1,12 +1,13 @@
-
+{% extends 'base.html' %}
+{% load staticfiles %}
 
 {% block body %}
 
-<h2>Here is a List of All the Species Within the Star Wars Universe:</h2><hr><br>
+<h2 class="text-center">Here is a List of All the Species Within the Star Wars Universe:</h2><hr><br>
 
 {% for kind in species %}
 
-    <bold></bold><a href="/species_detail/{{ species.pk }}">{{ kind.name }}</a><br>
+    <bold></bold><a href="/species_detail/{{ kind.pk }}">{{ kind.name }}</a><br><hr>
 
 {% endfor %}
 
